--- a/EmpireRUI/EmpireRUI.csproj
+++ b/EmpireRUI/EmpireRUI.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="ReactiveUI.WPF" Version="19.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Include="App.xaml" />
+  </ItemGroup>
+
 </Project>
